--- a/web/src/styles.less
+++ b/web/src/styles.less
@@ -32,3 +32,7 @@
   /* Used by some native-control emulations (switch/radio) */
   --tui-background-accent-2: #ff6a00;
 }
+
+button:not(:disabled) {
+  cursor: pointer;
+}
